# Protein-Ligand-Interaction-Viewer

./: .dockerignore  DOCKER_README.md  Dockerfile.backend  Dockerfile.frontend  GITHUB_SETUP.md  LOCAL_SETUP.md  Makefile  QUICKSTART.md  README.md  VERCEL_DEPLOYMENT.md  debug_detection.py  deploy-backend.bat  deploy-backend.sh  deploy-vercel.bat  deploy-vercel.sh  docker-compose.yml  docker.env.example  nginx.conf  pyproject.toml  start-local.bat  start-local.ps1  test-docker.ps1  test-docker.sh  test-local.ps1  test_improvements.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml
backend/: requirements.txt
backend/app/: __init__.py  contacts.py  main.py  schemas.py
backend/tests/: test_contacts.py
frontend/: env.example  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: ContactLegend.tsx  Controls.tsx  ErrorBoundary.tsx
frontend/src/lib/: api.ts  contactsColors.ts
samples/: README.md  sample.sdf
